--- a/module-2-solution/index.html
+++ b/module-2-solution/index.html
@@ -13,7 +13,7 @@
     <div class="contentbox">
     <div id="chi">Chicken
     </div>
-    <p>Lorem ipsum dolor sit amet, ne est solum dicit nobis, et vix nemore convenire, eum dicam vivendum adipisci at. No justo ludus corrumpit mea. Per ut porro assueverit referrentur. Cu aeterno veritus mei, et integre officiis eos. Dico exerci atomorum at sed.Commune reprimique pri te, eu vel vitae accumsan appellantur. Epicurei definitionem delicatissimi te nec, ullum abhorreant no ius.</p>
+    <p>Lorem ipsum dolor sit amet, ne est solum dicit nobis, et vix nemore convenire, eum dicam vivendum adipisci at. No justo ludus corrumpit mea. Per ut porro assueverit referrentur. Cu aeterno veritus mei, et integre officiis eos. Dico exerci atomorum at sed.Commune reprimique pri te, eu vel vitae accumsan appellantur. Epicurei definitionem delicatissimi te nec.</p>
     </div>
     </div>
    
@@ -21,7 +21,7 @@
    <div class="contentbox">     
     <div id="bee">Beef
       </div>
-       <p>Lorem ipsum dolor sit amet, ne est solum dicit nobis, et vix nemore convenire, eum dicam vivendum adipisci at. No justo ludus corrumpit mea. Per ut porro assueverit referrentur. Cu aeterno veritus mei, et integre officiis eos. Dico exerci atomorum at sed.Commune reprimique pri te, eu vel vitae accumsan appellantur. Epicurei definitionem delicatissimi te nec, ullum abhorreant no ius. </p>
+       <p>Lorem ipsum dolor sit amet, ne est solum dicit nobis, et vix nemore convenire, eum dicam vivendum adipisci at. No justo ludus corrumpit mea. Per ut porro assueverit referrentur. Cu aeterno veritus mei, et integre officiis eos. Dico exerci atomorum at sed.Commune reprimique pri te, eu vel vitae accumsan appellantur. Epicurei definitionem delicatissimi te nec</p>
     </div>
    </div>
    
@@ -31,7 +31,7 @@
       <div id="sus">
           Sushi
       </div>
-       <p>Lorem ipsum dolor sit amet, ne est solum dicit nobis, et vix nemore convenire, eum dicam vivendum adipisci at. No justo ludus corrumpit mea. Per ut porro assueverit referrentur. Cu aeterno veritus mei, et integre officiis eos. Dico exerci atomorum at sed.Commune reprimique pri te, eu vel vitae accumsan appellantur. Epicurei definitionem delicatissimi te nec, ullum abhorreant no ius. </p>
+       <p>Lorem ipsum dolor sit amet, ne est solum dicit nobis, et vix nemore convenire, eum dicam vivendum adipisci at. No justo ludus corrumpit mea. Per ut porro assueverit referrentur. Cu aeterno veritus mei, et integre officiis eos. Dico exerci atomorum at sed.Commune reprimique pri te, eu vel vitae accumsan appellantur. Epicurei definitionem delicatissimi te nec</p>
   </div>
    </div>
           
